# hs2bf

./: .gitattributes  .gitignore  Core.hs  Front.hs  Makefile  auto-test  conv  happy.tix  hs2bf.cabal  package.yaml  stack.yaml
.golden/bf/: Arithmetic.txt  Const.txt  ExplicitCase.txt  Halt.txt  Hello.txt  Lambda.txt  LocalFun.txt  QuickSort.txt  ShowList.txt
.golden/core/: Arithmetic.txt  Const.core  ExplicitCase.txt  Halt.txt  Hello.core  Lambda.txt  LocalFun.txt  QuickSort.core  ShowList.core
.golden/core-simpl/: Arithmetic.core  Const.txt  ExplicitCase.core  Halt.txt  Hello.txt  Lambda.txt  LocalFun.core  QuickSort.txt  ShowList.txt
.golden/gm/: Arithmetic.gm  Const.txt  ExplicitCase.gm  Halt.txt  Hello.txt  Lambda.txt  LocalFun.txt  QuickSort.gm  ShowList.gm
.golden/gm-simpl/: Arithmetic.txt  Const.txt  ExplicitCase.txt  Halt.gm  Hello.txt  Lambda.txt  LocalFun.txt  QuickSort.gm  ShowList.gm
.golden/sam/: Arithmetic.txt  Const.sam  ExplicitCase.sam  Halt.sam  Hello.txt  Lambda.txt  LocalFun.txt  QuickSort.txt  ShowList.txt
.golden/sam-simpl/: Arithmetic.sam  Const.txt  ExplicitCase.sam  Halt.sam  Hello.txt  Lambda.sam  LocalFun.sam  QuickSort.txt  ShowList.txt
.golden/ws/: Arithmetic.ws  Const.ws  ExplicitCase.ws  Halt.ws  Hello.ws  Lambda.ws  LocalFun.ws  QuickSort.ws  ShowList.ws
.stack-work/: stack.sqlite3
bfi/: conv
docs/: CHANGELOG.md
docs/developers/: ARCHITECTURE.md
examples/: Arithmetic.hs  Const.hs  ExplicitCase.hs  Halt.hs  Hello.hs  Lambda.hs  LocalFun.hs  Prelude.hs  QuickSort.hs  ShowList.hs
hs/app/: Main.hs
hs/src/: Core.hs  (+7 more)
(+28 files in other folders)
