cabal-version:      2.4
name:               hs2bf
version:            0.6.2
author:             Daiki Handa
maintainer:         xanxys@gmail.com
synopsis:           Haskell to Brainfuck compiler
license:            BSD-3-Clause
license-file:       LICENSE
category:           Compiler
build-type:         Simple

description:
    Proof of concept implementation of Haskell to Brainfuck compiler.

tested-with:        GHC >=9.0

------------------------------------------------------------
-- Library
------------------------------------------------------------

library
    hs-source-dirs:      hs/src
    exposed-modules:
        Front
        Core
        GMachine
        SAM
        Brainfuck
        Util
        SRuntime

    build-depends:
        base >=4.14 && <5,
        containers,
        mtl,
        array,
        filepath,
        directory,
        haskell-src

    default-language:    Haskell2010

------------------------------------------------------------
-- Executable
------------------------------------------------------------

executable hs2bf
    hs-source-dirs:      hs/app
    main-is:             Main.hs

    build-depends:
        base,
        hs2bf,
        filepath,

    default-language:    Haskell2010
